--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+root {
+
+}
 
 body {
   margin: 0;
 }
 
 .page {
-  background-image: linear-gradient(45deg, black 20%, Dimgrey);
+  background-image: linear-gradient(70deg, black 20%, Dimgrey);
 }
 
 .navbar {
@@ -78,7 +81,7 @@ body {
   padding: 15px 0 15px 0;
 }
 
-@media (max-width: 1200px) {
+@media only screen and (max-width: 1080px) {
   .carros >  {
     margin: 30px;
   }
@@ -90,6 +93,23 @@ body {
 
   .carros > p {
     font-size: 2em;
+    margin: 0;
+    padding: 15px 0 15px 0;
+  }
+}
+
+@media only screen and (max-width: 1080px) and (orientation: landscape) {
+  .carros >  {
+    margin: 30px;
+  }
+
+  .carros > img {
+    width: 300px;
+    height: 200px;
+  }
+
+  .carros > p {
+    font-size: 1em;
     margin: 0;
     padding: 15px 0 15px 0;
   }
