--- a/detalleCarros/detalle.css
+++ b/detalleCarros/detalle.css
@@ -62,19 +62,19 @@ body {
     margin: 0;
 }
 
-.photos {
+.photos-a3 {
     display: block;
-    width: 70vw;
+    width: 62vw;
     height: 70vh;
     margin: 20px auto 20px auto;
     background-size: 100%;
-    animation-name: slides;
+    animation-name: slides-a3;
     animation-duration: 12s;
     animation-timing-function: ease;
     animation-iteration-count: infinite;
 }
 
-@keyframes slides {
+@keyframes slides-a3 {
     0% {
         background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A3-Sedan-6806_14.jpg);
     }
@@ -89,6 +89,66 @@ body {
     }
     100% {
         background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A3-Sedan-6806_14.jpg);
+    }
+}
+
+.photos-a4 {
+    display: block;
+    width: 62vw;
+    height: 70vh;
+    margin: 20px auto 20px auto;
+    background-size: 100%;
+    animation-name: slides-a4;
+    animation-duration: 12s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slides-a4 {
+    0% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_15.jpg);
+    }
+    25% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_18.jpg);
+    }
+    50% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_19.jpg);
+    }
+    75% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_17.jpg);
+    }
+    100% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_15.jpg);
+    }
+}
+
+.photos-a7 {
+    display: block;
+    width: 62vw;
+    height: 74vh;
+    margin: 20px auto 20px auto;
+    background-size: 100%;
+    animation-name: slides-a7;
+    animation-duration: 12s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slides-a7 {
+    0% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_90.jpg);
+    }
+    25% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_46.jpg);
+    }
+    50% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_48.jpg);
+    }
+    75% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_88.jpg);
+    }
+    100% {
+        background-image: url(https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_90.jpg);
     }
 }
 
