--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   background-color: rgb(255, 100, 100);
   align-items: center;
   height: fit-content;
+  z-index: 1000;
 }
 
 .navbar > span {
@@ -164,12 +165,6 @@ body {
     padding: 15px 0 15px 0;
   }
 }
-
-
-
-
-
-
 
 
 
