--- a/style.css
+++ b/style.css
@@ -1,33 +1,56 @@
+root {
+  font-family: 'Domine', serif;
+}
 
 body {
   margin: 0;
 }
 
 .page {
-  background-image: linear-gradient(45deg, black 20%, Dimgrey);
+  background-image: linear-gradient(70deg, black 20%, Dimgrey);
+}
+
+.logo {
+  text-decoration: none;
+  font-size: 2.5vh;
+  padding: .1vh 0 .1vh 2.5vw;
+  margin: 0;
+}
+
+.logo > h1 {
+  margin: 0;
+  color: Black;
 }
 
 .navbar {
   display: flex;
   background-color: rgb(255, 100, 100);
   align-items: center;
-  padding: 1vh 2vw;
-  gap: 2vw;
-  height: 5vh;
-}
-
-.navbar > h1 {
-  font-size: 3.5vh;
+  height: fit-content;
+  z-index: 1000;
 }
 
 .navbar > span {
-  width: 100%;
+  width: 60vw;
 }
 
-.navbar > a {
+.nav-link {
   text-decoration: none;
   color: Black;
-  font-size: 2vh;
+  font-size: 4vh;
+  height: auto;
+  padding: 2.3vh 3vw 2.3vh 3vw;
+  transition:.3s;
+}
+
+.nav-link:hover {
+  color: Gainsboro;
+  background-color: Maroon;
+  transition:.3s;
+}
+
+#real-navbar {
+  position: fixed;
 }
 
 .descripcion > h2 {
@@ -69,16 +92,47 @@ body {
 .carros > img {
   width: 500px;
   height: 350px;
+  transition: .5s;
+}
+
+.carros > img:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3), 0 12px 40px 0 rgba(0, 0, 0, 0.3);
+  transition: .5s;
 }
 
 .carros > p {
   color: White;
-  font-size: 1.2em;
+  font-size: 1.7em;
   margin: 0;
   padding: 15px 0 15px 0;
+  text-align: center;
 }
 
-@media (max-width: 1200px) {
+.carros > p::before {
+  opacity: 0;
+  content: "🏁 ";
+  transition: 1s;
+}
+
+.carros > p::after {
+  opacity: 0;
+  content: " 🏁";
+  transition: 1s;
+}
+
+.carros:hover > p::before {
+  opacity: 1;
+  content: "🏁 ";
+  transition: 1s;
+}
+
+.carros:hover > p::after {
+  opacity: 1;
+  content: " 🏁";
+  transition: 1s;
+}
+
+@media only screen and (max-width: 1080px) {
   .carros >  {
     margin: 30px;
   }
@@ -95,11 +149,22 @@ body {
   }
 }
 
+@media only screen and (max-width: 1080px) and (orientation: landscape) {
+  .carros >  {
+    margin: 30px;
+  }
 
+  .carros > img {
+    width: 300px;
+    height: 200px;
+  }
 
-
-
-
+  .carros > p {
+    font-size: 1em;
+    margin: 0;
+    padding: 15px 0 15px 0;
+  }
+}
 
 
 
